[tool.poetry]
name = "openchain"
version = "0.1.0"
description = ""
authors = ["avmametev <avmametev@avito.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
sentence-transformers = "^3.0.1"
openai = "^1.38.0"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
